# gbaic

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.txt
gbaic/: CMakeLists.txt  main.cpp  options.hpp
gbaic/src/: main.cpp
libgbaic/: CMakeLists.txt  version.hpp.in
libgbaic-unittest/: CMakeLists.txt  libgbaic_unittest_config.hpp.in
libgbaic-unittest/src/: input_file_test.cpp  main.cpp  options_test.cpp  parse_options_test.cpp  shrinkler_parameters_test.cpp  shrinkler_test.cpp  test_utilities.cpp  test_utilities.hpp
libgbaic/include/: console.hpp  input_file.hpp  log.hpp  options.hpp  shrinkler.hpp
libgbaic/src/: input_file.cpp  options.cpp  shrinkler.cpp  shrinkler.ipp  shrinkler_compilation_test.cpp
libshrinkler/: CMakeLists.txt
libshrinkler-unittest/: CMakeLists.txt
libshrinkler-unittest/src/: main.cpp  shrinkler_parameters_test.cpp
libshrinkler/include/: libshrinkler.hpp
libshrinkler/src/: libshrinkler.cpp
test/: CMakeLists.txt
unittest/: CMakeLists.txt  main.cpp
